Update Proyecto d s.tex

--- a/Proyecto d s.tex
+++ b/Proyecto d s.tex
@@ -67,57 +67,99 @@ Documento validado por las partes en fechas: [fecha]
 \end{enumerate}
 % Pagina 4 Documento
 \newpage
-\section{INTRODUCCIÓN}
-Your introduction goes here! Simply start writing your document and use the Recompile button to view the updated PDF preview. Examples of commonly used commands and features are listed below, to help you get started.
-
-Once you're familiar with the editor, you can find various project settings in the Overleaf menu, accessed via the button in the very top left of the editor. To view tutorials, user guides, and further documentation, please visit our \href{https://www.overleaf.com/learn}{help library}, or head to our plans page to \href{https://www.overleaf.com/user/subscription/plans}{choose your plan}.
+\section{Introducción}
+En el entorno urbano de Temuco, los sistemas de transporte público desempeñan un papel de vital importancia en la movilidad y la conectividad dentro de la ciudad. Sin embargo, la capacidad para rastrear las rutas tanto de los autobuses como de los colectivos y monitorear su ubicación en tiempo real es inexistente en la actualidad. Reconociendo esta necesidad, presentamos el sistema de software "XXXXXXXXXX".
 \subsection{Propósito}
-Your introduction goes here! Simply start writing your document and use the Recompile button to view the updated PDF preview. Examples of commonly used commands and features are listed below, to help you get started.
-
-Once you're familiar with the editor, you can find various project settings in the Overleaf menu, accessed via the button in the very top left of the editor. To view tutorials, user guides, and further documentation, please visit our \href{https://www.overleaf.com/learn}{help library}, or head to our plans page to \href{https://www.overleaf.com/user/subscription/plans}{choose your plan}.
+El propósito principal de XXXXXXXXXX es proporcionar a los residentes y visitantes de Temuco una plataforma fácil de usar para acceder a información completa sobre las rutas del TP y la ubicación actual de estos mismos que operan dentro de la ciudad. Para esto utilizaremos tecnologías como el seguimiento GPS y las aplicaciones móviles. El sistema tiene como objetivo mejorar la experiencia general de tránsito, mejorar la accesibilidad y promover el uso eficiente de los recursos del TP.
 \subsection{Alcance}
-Your introduction goes here! Simply start writing your document and use the Recompile button to view the updated PDF preview. Examples of commonly used commands and features are listed below, to help you get started.
-
-Once you're familiar with the editor, you can find various project settings in the Overleaf menu, accessed via the button in the very top left of the editor. To view tutorials, user guides, and further documentation, please visit our \href{https://www.overleaf.com/learn}{help library}, or head to our plans page to \href{https://www.overleaf.com/user/subscription/plans}{choose your plan}.
+El software XXXXXXXXXX abarca tanto una interfaz basada en web como aplicaciones móviles diseñadas para la plataforma Android. Ofrece funciones tanto para usuarios como para administradores, lo que permite a los usuarios planificar sus recorridos sin tanto esfuerzo y a las autoridades de tránsito monitorear y optimizar las operaciones del TP.
 \subsection{Personal involucrado}
-\begin{tabularx}{\textwidth}{|>{\hsize=0.5\hsize}X|>{\hsize=1.5\hsize}X|}
-\hline
- Columna 1 & Columna 2 \\
- \hline
- Nombre & Fila 1 \\
- \hline
- Rol & Fila 2 \\
- \hline
- Categoría profesional 3 & Fila 3 \\
- \hline
- Responsabilidad & Fila 4 \\
- \hline
- Información de contacto & Fila 5 \\
- \hline
- Aprobación & Fila 6 \\
- \hline
-\end{tabularx}
-
+\begin{center}
+    \begin{tabularx}{\textwidth}{|>{\hsize=0.5\hsize}X|>{\hsize=1.5\hsize}X|}
+    \hline
+     Nombre & Yaninna Álvarez \\
+     \hline
+     Rol & Lider del Proyecto \\
+     \hline
+     Categoría profesional & TP-Informatica  \\
+     \hline
+     Responsabilidad & Análisis de información y programación  \\
+     \hline
+     Información de contacto & rossioalvarez373@gmail.com \\
+     \hline
+    \end{tabularx}
+    
+    \vspace{1cm}
+    
+    \begin{tabularx}{\textwidth}{|>{\hsize=0.5\hsize}X|>{\hsize=1.5\hsize}X|}
+    \hline
+     Nombre & Marcelo Santana \\
+     \hline
+     Rol & XXXXX \\
+     \hline
+     Categoría profesional & TP-Informatica  \\
+     \hline
+     Responsabilidad & Análisis de información y programación  \\
+     \hline
+     Información de contacto & msantanaastorga25@gmail.com \\
+     \hline
+    \end{tabularx}
+    
+    \vspace{1cm}
+    
+    \begin{tabularx}{\textwidth}{|>{\hsize=0.5\hsize}X|>{\hsize=1.5\hsize}X|}
+    \hline
+     Nombre & Demian Quezada \\
+     \hline
+     Rol & XXXXX \\
+     \hline
+     Categoría profesional & TP-Informatica  \\
+     \hline
+     Responsabilidad & Análisis de información y programación  \\
+     \hline
+     Información de contacto & deimon.quezada@gmail.com \\
+     \hline
+    \end{tabularx}
+    
+    \vspace{1cm}
+    
+    \begin{tabularx}{\textwidth}{|>{\hsize=0.5\hsize}X|>{\hsize=1.5\hsize}X|}
+    \hline
+     Nombre & José Calfiman \\
+     \hline
+     Rol & XXXXX \\
+     \hline
+     Categoría profesional & TP-Informatica  \\
+     \hline
+     Responsabilidad & Análisis de información y programación  \\
+     \hline
+     Información de contacto & joseelgeniho@gmail.com \\
+     \hline
+    \end{tabularx}
+\end{center}
 \subsection{Definiciones, acrónimos y abreviaturas}
-Your introduction goes here! Simply start writing your document and use the Recompile button to view the updated PDF preview. Examples of commonly used commands and features are listed below, to help you get started.
+\begin{flushleft}
+    \begin{itemize}
+        \item GPS: Sistema de Posicionamiento Global
+        \item Ciudad: Ciudad de Temuco
+        \item TP: Transporte Público
+    \end{itemize}
+\end{flushleft}
 
-Once you're familiar with the editor, you can find various project settings in the Overleaf menu, accessed via the button in the very top left of the editor. To view tutorials, user guides, and further documentation, please visit our \href{https://www.overleaf.com/learn}{help library}, or head to our plans page to \href{https://www.overleaf.com/user/subscription/plans}{choose your plan}.
 \subsection{Referencias}
-
-\begin{tabularx}{\textwidth}{|X|X|X|X|X|}
+\begin{center}
+\begin{tabularx}{\linewidth}{|>{\hsize=0.5\hsize}X|>{\hsize=1.5\hsize}X|X|X|}
 \hline
-\multicolumn{1}{|c|}{Referencia} & \multicolumn{1}{c|}{Titulo} & \multicolumn{1}{c|}{Ruta} & \multicolumn{1}{c|}{Fechas} & \multicolumn{1}{c|}{Autor} \\
+\multicolumn{1}{|c|}{\textbf{Referencia}} & \multicolumn{1}{c|}{\textbf{Título}} & \multicolumn{1}{c|}{\textbf{Fechas}} & \multicolumn{1}{c|}{\textbf{Autor}} \\
 \hline
-\multicolumn{1}{|l|}{Fila 2} & \multicolumn{1}{l|}{Fila 2} & \multicolumn{1}{l|}{Fila 2} & \multicolumn{1}{l|}{Fila 2} & \multicolumn{1}{l|}{Fila 2} \\
-\hline
-\multicolumn{1}{|l|}{Fila 3} & \multicolumn{1}{l|}{Fila 3} & \multicolumn{1}{l|}{Fila 3} & \multicolumn{1}{l|}{Fila 3} & \multicolumn{1}{l|}{Fila 3} \\
+IEEE 830 & IEEE 830-1998 - IEEE Recommended Practice for Software Requirements Specifications & 1998 & Institute of Electrical and Electronics Engineers \\
 \hline
 \end{tabularx}
+\end{center}
+
 
 \subsection{Resumen}
-Your introduction goes here! Simply start writing your document and use the Recompile button to view the updated PDF preview. Examples of commonly used commands and features are listed below, to help you get started.
-
-Once you're familiar with the editor, you can find various project settings in the Overleaf menu, accessed via the button in the very top left of the editor. To view tutorials, user guides, and further documentation, please visit our \href{https://www.overleaf.com/learn}{help library}, or head to our plans page to \href{https://www.overleaf.com/user/subscription/plans}{choose your plan}.
+El proyecto consiste en desarrollar un sistema de software denominado "XXXXXXXXXX" destinado a mejorar la experiencia del transporte público en la ciudad de Temuco. Se busca proporcionar a residentes y visitantes una plataforma accesible para acceder a información detallada sobre las rutas y la ubicación de los autobuses y colectivos en tiempo real. La aplicación contará con interfaz web y aplicación movil, empleando tecnologías como el seguimiento GPS. El objetivo es optimizar la movilidad, mejorar la accesibilidad y promover el uso eficiente de los recursos del transporte público en Temuco.
 
 % Pagina siguiente
 \newpage
